--- a/music-shop-client/build.gradle
+++ b/music-shop-client/build.gradle
@@ -36,3 +36,11 @@ repositories {
     jcenter()
     mavenCentral()
 }
+
+jar {
+    manifest {
+        attributes(
+            'Main-Class' : 'com.hbvhuwe.musicshop.Main'
+        )
+    }
+}
