create multiproject build
build all: ./gradlew build
build music-shop-client: ./gradlew :music-shop-client:build
build music-shop-server: ./gradlew :music-shop-server:build

--- a/settings.gradle
+++ b/settings.gradle
@@ -7,4 +7,7 @@
  * in the user guide at https://docs.gradle.org/4.5.1/userguide/multi_project_builds.html
  */
 
-rootProject.name = 'music-shop-client'
+rootProject.name = 'music-shop'
+
+include 'music-shop-client'
+include 'music-shop-server'
