--- a/music-shop-api/src/main/resources/application.properties
+++ b/music-shop-api/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 db.driver=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/music_shop_db
-db.username=vova
-db.password=1029
+db.url=jdbc:mysql://database:3306/music_shop_db
+db.username=music_shop
+db.password=7Ts2V4NzxiHAr7FVgm7qYQFL9k0=
 
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 hibernate.show_sql=true
