--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,16 @@ services:
       - "8080:8080"
     command: ["java", "-jar", "/app/build/libs/music-shop-server-0.1.0.jar"]
 
+  visualizer:
+    image: dockersamples/visualizer:stable
+    ports:
+      - "5000:8080"
+    volumes:
+      - "/var/run/docker.sock:/var/run/docker.sock"
+    deploy:
+      placement:
+        constraints: [node.role == manager]
+
 configs:
   web-app.conf:
     external: true
